--- a/package.json
+++ b/package.json
@@ -1,34 +1,28 @@
 {
-  "name": "food-festival",
+  "name": "module-18-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "assets/js/script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/swazunga/food-festival.git"
+    "build": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/swazunga/food-festival/issues"
-  },
-  "homepage": "https://github.com/swazunga/food-festival#readme",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.4.0",
     "file-loader": "^6.2.0",
-    "webpack": "^5.73.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.6.0"
+    "image-webpack-loader": "^6.0.0",
+    "webpack": "^5.37.1",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "image-webpack-loader": "^1.4.0",
-    "jquery": "^3.6.0",
+    "jquery": "^3.4.1",
     "popper.js": "^1.16.0"
   }
 }
